--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
-REPLICATE_API_KEY=
+REPLICATE_API_KEY=31048a78e160a70947f825d89b1784a7851f139c
 
 # Optional, if you're doing rate limiting
 UPSTASH_REDIS_REST_URL=
